k8s_resources/ingress/example/path2-in-ns-test2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: path1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test.202.173.9.62.zc.zdns.cn
      http:
        paths:
          - path: /hello
            backend:
              serviceName: hello
              servicePort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9090
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - image: hiwenzi/hello-world-go:latest
          imagePullPolicy: IfNotPresent
          name: hello
      dnsPolicy: ClusterFirst
      restartPolicy: Always
